updated docs on hammard embeddings

--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -30,22 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "fe6b94e0-f903-422f-baab-76010e772026",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'stellargraph'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-ebc76ddf2c14>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnode2vec\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mNode2Vec\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mn2v\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnode2vec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medges\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mHadamardEmbedder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mstellargraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mEdgeSplitter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'stellargraph'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import networkx as nx\n",
     "import scipy as sp\n",
@@ -644,7 +632,7 @@
    "id": "c27f5562-4eb0-48f5-91a0-877edbe2c8ad",
    "metadata": {},
    "source": [
-    "The HadamardEmbedder embedding algorithm is applied to the result of the Node2Vec algorithm (keyed_vectors=model.wv) used in order to map each edge of the graph in a vector of two dimensions."
+    "HammardEmbedder is a built in function in the Node2Vec module which will map each edge in the graph to a 2 dimensional vector."
    ]
   },
   {
@@ -655,6 +643,32 @@
    "outputs": [],
    "source": [
     "edges_embs = HadamardEmbedder(keyed_vectors=mdl.wv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "84a284bc-6b3d-45cf-a6d7-e5a638706acb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-3.7655393e-03, -2.8567361e-03,  4.9281660e-03,  9.7447746e-03,\n",
+       "        3.7780097e-01,  1.0559981e-01,  9.0187088e-02,  2.1004081e-01,\n",
+       "       -9.8845344e-03,  4.4821419e-02,  8.9732967e-03,  1.9710543e-04,\n",
+       "       -2.1407234e-02,  1.5342700e-02,  7.0044226e-03,  2.9080274e-04],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=[1,2]\n",
+    "edges_embs[str(x[0]),str(x[1])]"
    ]
   },
   {
