--- a/dtw/dtw.ipynb
+++ b/dtw/dtw.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "5f4fcf31-3bd7-4b06-bc93-7554bcb7e2f8",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "70dbe976-e580-40d6-8dd4-fa1d71cc4f5e",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
+   "id": "895b6bd2-1411-4981-85a0-74efe2a3a02b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# benchmark the dates to start from 0\n",
+    "for ticker, df in dfs.items():\n",
+    "    dates = df.index.values\n",
+    "    date_map = {date:idx for idx, date in enumerate(dates)}\n",
+    "    \n",
+    "    dfs[ticker]['benchmark_date'] = dfs[ticker].index.map(date_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f7a5ba86-5f70-47aa-8f49-8eb8bf4b0c76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# identify the minimum date difference available to conduct time series analysis on\n",
+    "days_diff = {\n",
+    "    k:df.benchmark_date.max() - df.benchmark_date.min() for k,df in dfs.items()\n",
+    "}\n",
+    "max_range = min(days_diff.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "088ff5b3-8873-4671-a8ec-c44a0ffb19f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update dfs to be between 0 and max_range\n",
+    "dfs = {k:df[df['benchmark_date'].between(0, max_range)] for k,df in dfs.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "5ec4226d-7499-44a8-9c21-15ecfa5be8e1",
    "metadata": {},
    "outputs": [],
@@ -243,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "id": "b7ef69ee-31f9-4b74-b67d-22f516c03122",
    "metadata": {},
    "outputs": [],
@@ -258,21 +298,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "d49ee28f-9749-4b6c-a3ef-70d625481aa2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'COIN': 503769.2873516083,\n",
-       " 'DOCN': 523238.34539985657,\n",
-       " 'BMBL': 596021.5789299011,\n",
-       " 'COUR': 607871.389881134,\n",
-       " 'DUOL': 513528.0988063812}"
+       "{'COIN': 23817.540073394775,\n",
+       " 'DOCN': 1551.9699783325195,\n",
+       " 'BMBL': 2700.2300148010254,\n",
+       " 'COUR': 802.4999809265137,\n",
+       " 'DUOL': 12059.039966583252}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,12 +322,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db6a7e3c-53f1-4d1b-bcd8-f429f20a1e98",
+   "cell_type": "markdown",
+   "id": "5bf26414-8a0d-4873-8eb0-4a698bf304a8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "These are the distances between the stock trend associated to recent IPO companies in comparison to Shopify during the same initial time period that they've been public. How you can interpret the result is quite simple, the values in the distances dictionary correspond to the distance from the trend observed by Shopify and the trend observed by the startup (aka the key in distances dictionary). The lower the value implies the more similar the trend lines are and the higher the value implies the more different the trend lines. Clearly we can see COUR (aka Course Era) holds the most similar trend line to Shopify, however just because it's the most similar, doesn't imply it will have the same level of success as Shopify did. It's quite hard to gauge it and although COUR is the most similar in this selection of data, it's still quite far from the Shopify trend line. "
+   ]
   },
   {
    "cell_type": "markdown",
