updated dtw stock similarity process to add explanations to results and benchmark initial processes

--- a/dtw/dtw.ipynb
+++ b/dtw/dtw.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ff4cf372-4980-47bc-9bc0-060645df19b0",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "895b6bd2-1411-4981-85a0-74efe2a3a02b",
    "metadata": {},
    "outputs": [],
@@ -248,42 +248,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "f7a5ba86-5f70-47aa-8f49-8eb8bf4b0c76",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# identify the minimum date difference available to conduct time series analysis on\n",
-    "days_diff = {\n",
-    "    k:df.benchmark_date.max() - df.benchmark_date.min() for k,df in dfs.items()\n",
-    "}\n",
-    "max_range = min(days_diff.values())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "088ff5b3-8873-4671-a8ec-c44a0ffb19f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# update dfs to be between 0 and max_range\n",
-    "dfs = {k:df[df['benchmark_date'].between(0, max_range)] for k,df in dfs.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "5ec4226d-7499-44a8-9c21-15ecfa5be8e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "benchmark = np.array(dfs['SHOP'].Close.values)"
+    "shop_df = dfs['SHOP']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "b7ef69ee-31f9-4b74-b67d-22f516c03122",
    "metadata": {},
    "outputs": [],
@@ -291,6 +266,9 @@
     "distances = {}\n",
     "for k,v in dfs.items():\n",
     "    if k != 'SHOP':\n",
+    "        max_d = v['benchmark_date'].max()\n",
+    "        benchmark = np.array(shop_df[shop_df['benchmark_date'].between(0, max_d)]['Close'].values)\n",
+    "        \n",
     "        y = np.array(v.Close.values)\n",
     "        d,p = fastdtw(benchmark, y)\n",
     "        distances[k] = d"
@@ -298,21 +276,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "d49ee28f-9749-4b6c-a3ef-70d625481aa2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'COIN': 23817.540073394775,\n",
-       " 'DOCN': 1551.9699783325195,\n",
-       " 'BMBL': 2700.2300148010254,\n",
-       " 'COUR': 802.4999809265137,\n",
+       "{'COIN': 42639.220125198364,\n",
+       " 'DOCN': 7096.249967575073,\n",
+       " 'BMBL': 4369.519968032837,\n",
+       " 'COUR': 756.6499900817871,\n",
        " 'DUOL': 12059.039966583252}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
