cleaned up notebook

--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -51,6 +51,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import arxiv\n",
+    "\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import matthews_corrcoef\n",
     "from itertools import product\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from node2vec import Node2Vec as n2v\n",
@@ -770,6 +776,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61708a7e-18c4-4cb3-b6e8-74bc2446b13d",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "b8eb0724-c0fa-4124-966e-587ef2a0e93f",
@@ -913,22 +925,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "1bee1762-5af4-4b65-9772-520f8796fb4c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
-    "from sklearn.metrics import f1_score, auc, roc_curve, roc_auc_score,confusion_matrix\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "45fe205e-cc61-4f91-acce-449792808bb0",
    "metadata": {},
@@ -997,16 +993,6 @@
    "metadata": {},
    "source": [
     "## Model Performance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "8b7f4531-7122-4d49-8e82-f9fe1597ca33",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import matthews_corrcoef"
    ]
   },
   {
@@ -1124,30 +1110,6 @@
    "source": [
     "---"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70118ef7-1b92-4155-99f3-03247c4f3892",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41f0a20a-73ec-4d97-8b3b-579c393c76f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e88a44e7-567e-49a2-bd00-72834c98e942",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
