--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -36,10 +36,7 @@
     "## What is Link Prediction?\n",
     "There are many ways to solve problems in recommendation engines. These solutions range from algorithmic approaches, link prediction algorithms, embedding based solutions, etc. Link prediction is also referred to as graph completion, a common problem in graph theory. In the simplest form, given a network, you want to you want to know if there should be an edge between a pair of nodes. This definition changes slightly depending on the type of network you're working with. A directed / multi graph can have slightly different interpretations but the fundamental concept of identifying missing edges in a network remains.  \n",
     "\n",
-    "Problems in link prediction are also quite common when dealing with temporal networks (networks which change over time). Given a network G at time step t, you would want to predict the edges of the graph G at time step t+1.  \n",
-    "\n",
-    "\n",
-    "## Cold Start Problem in Recommendation Systems"
+    "Problems in link prediction are also quite common when dealing with temporal networks (networks which change over time). Given a network G at time step t, you would want to predict the edges of the graph G at time step t+1.  "
    ]
   },
   {
@@ -102,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def search_arxiv(queries, max_results = 1000):\n",
+    "def search_arxiv(queries, max_results = 100):\n",
     "    '''\n",
     "    This function will search arxiv associated to a set of queries and store\n",
     "    the latest 10000 (max_results) associated to that search.\n",
@@ -192,6 +189,142 @@
     "    max_results = 100\n",
     ")\n",
     "research_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "827e67ab-6548-4da5-843b-a3fc0c1bf8db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>date</th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>url</th>\n",
+       "      <th>main_topic</th>\n",
+       "      <th>all_topics</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Review of automated time series forecasting pi...</td>\n",
+       "      <td>2022-02-03 17:26:27+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>http://arxiv.org/pdf/2202.01712v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG]</td>\n",
+       "      <td>[Stefan Meisenbacher, Marian Turowski, Kaleb P...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hubble Asteroid Hunter: I. Identifying asteroi...</td>\n",
+       "      <td>2022-02-01 06:56:20+00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>http://arxiv.org/pdf/2202.00246v1</td>\n",
+       "      <td>astro-ph.EP</td>\n",
+       "      <td>[astro-ph.EP, astro-ph.IM]</td>\n",
+       "      <td>[Sandor Kruk, Pablo García Martín, Marcel Pope...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...</td>\n",
+       "      <td>2022-01-31 18:02:09+00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.13396v2</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG, cs.AI, stat.ML]</td>\n",
+       "      <td>[Yash Mehta, Colin White, Arber Zela, Arjun Kr...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Online AutoML: An adaptive AutoML framework fo...</td>\n",
+       "      <td>2022-01-24 15:37:20+00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.09750v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG, cs.AI]</td>\n",
+       "      <td>[Bilge Celik, Prabhant Singh, Joaquin Vanschoren]</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Automated Reinforcement Learning (AutoRL): A S...</td>\n",
+       "      <td>2022-01-11 12:41:43+00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.03916v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG]</td>\n",
+       "      <td>[Jack Parker-Holder, Raghu Rajan, Xingyou Song...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0  Review of automated time series forecasting pi...   \n",
+       "1  Hubble Asteroid Hunter: I. Identifying asteroi...   \n",
+       "2  NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...   \n",
+       "3  Online AutoML: An adaptive AutoML framework fo...   \n",
+       "4  Automated Reinforcement Learning (AutoRL): A S...   \n",
+       "\n",
+       "                       date  article_id                                url  \\\n",
+       "0 2022-02-03 17:26:27+00:00           0  http://arxiv.org/pdf/2202.01712v1   \n",
+       "1 2022-02-01 06:56:20+00:00           1  http://arxiv.org/pdf/2202.00246v1   \n",
+       "2 2022-01-31 18:02:09+00:00           2  http://arxiv.org/pdf/2201.13396v2   \n",
+       "3 2022-01-24 15:37:20+00:00           3  http://arxiv.org/pdf/2201.09750v1   \n",
+       "4 2022-01-11 12:41:43+00:00           4  http://arxiv.org/pdf/2201.03916v1   \n",
+       "\n",
+       "    main_topic                  all_topics  \\\n",
+       "0        cs.LG                     [cs.LG]   \n",
+       "1  astro-ph.EP  [astro-ph.EP, astro-ph.IM]   \n",
+       "2        cs.LG     [cs.LG, cs.AI, stat.ML]   \n",
+       "3        cs.LG              [cs.LG, cs.AI]   \n",
+       "4        cs.LG                     [cs.LG]   \n",
+       "\n",
+       "                                             authors  year  \n",
+       "0  [Stefan Meisenbacher, Marian Turowski, Kaleb P...  2022  \n",
+       "1  [Sandor Kruk, Pablo García Martín, Marcel Pope...  2022  \n",
+       "2  [Yash Mehta, Colin White, Arber Zela, Arjun Kr...  2022  \n",
+       "3  [Bilge Celik, Prabhant Singh, Joaquin Vanschoren]  2022  \n",
+       "4  [Jack Parker-Holder, Raghu Rajan, Xingyou Song...  2022  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "research_df.head()"
    ]
   },
   {
@@ -421,7 +554,7 @@
     }
    ],
    "source": [
-    "%time g_emb = n2v(research_nx, dimensions=16)"
+    "%time g_emb = n2v(tp_nx, dimensions=16)"
    ]
   },
   {
@@ -496,8 +629,8 @@
    "source": [
     "emb_df = (\n",
     "    pd.DataFrame(\n",
-    "        [mdl.wv.get_vector(str(n)) for n in research_nx.nodes()],\n",
-    "        index = research_nx.nodes\n",
+    "        [mdl.wv.get_vector(str(n)) for n in tp_nx.nodes()],\n",
+    "        index = tp_nx.nodes\n",
     "    )\n",
     ")"
    ]
@@ -763,7 +896,7 @@
     }
    ],
    "source": [
-    "predict_links(G = research_nx, df = emb_df, article_id = 1, N = 10)"
+    "predict_links(G = tp_nx, df = emb_df, article_id = 1, N = 10)"
    ]
   },
   {
@@ -791,7 +924,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_nodes = list(research_nx.nodes())"
+    "unique_nodes = list(tp_nx.nodes())"
    ]
   },
   {
@@ -884,7 +1017,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "edges = list(research_nx.edges())"
+    "edges = list(tp_nx.edges())"
    ]
   },
   {
@@ -942,6 +1075,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get training and target data\n",
     "X = np.array(edge_features)\n",
     "y = is_con"
    ]
@@ -953,6 +1087,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# train test split\n",
     "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size = 0.3)"
    ]
   },
@@ -983,7 +1118,7 @@
    ],
    "source": [
     "%%time\n",
-    "# classifier\n",
+    "# GBC classifier\n",
     "clf = GradientBoostingClassifier()\n",
     "\n",
     "# train the model\n",
