added initial strucutre

--- a/node_classification/classify_node.ipynb
+++ b/node_classification/classify_node.ipynb
@@ -10,11 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fbf4a040-67f8-421b-aef3-2ccbac7f1946",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import networkx as nx\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, matthews_corrcoef, confusion_matrix, classification_report\n",
+    "from itertools import product\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from node2vec import Node2Vec as n2v"
+   ]
   },
   {
    "cell_type": "code",
@@ -22,15 +33,172 @@
    "id": "1af08b4c-d203-4aa3-be20-2271b06d8827",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# constants"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c79e656-b9a1-4c8a-bc5c-016e1ab8b23b",
+   "metadata": {},
+   "source": [
+    "## Fetch Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00a0f9af-524d-4370-bce7-f8c6855152dd",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "929b573c-ba90-4bd5-a276-4f6341d8e927",
+   "id": "03ab01b5-f9c9-40b1-8ec3-395a753f501a",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a7886d3-e135-495e-a96a-aa141cf51fae",
+   "metadata": {},
+   "source": [
+    "## Create Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c6e106a-ba56-4659-a188-772306d5c078",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c09d5544-3b6e-42ab-9f47-4e2dcf096bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88e5a6ab-eca7-46f1-91b0-49e96514ecf6",
+   "metadata": {},
+   "source": [
+    "## Apply Node2Vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23802c9a-b3a4-435b-b53d-4a01b88ac758",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63a54708-bc49-4079-9683-fab39fa704a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17f87fc5-a687-4a6a-a9db-6480161aed88",
+   "metadata": {},
+   "source": [
+    "## Train Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56c64f40-2fdd-433a-bee3-0e72720b5b8d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaf9dccd-5ab6-4493-ad33-27cedeca77f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb8e382b-f693-4d4f-85ac-5ec0fc696583",
+   "metadata": {},
+   "source": [
+    "## Evaluate Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd61cfc3-0d7c-489a-82d0-dc9a38ce155d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d5d8343-485f-4ba0-a066-81c9948e9afd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f438fe8b-ebbb-484d-bf34-716e4b7d9fd1",
+   "metadata": {},
+   "source": [
+    "## Predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2ccbad5-9504-48f1-a780-7c2ec6a7b5b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f51f3ad-a7e3-4e32-9a96-a5b4c6338e43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cc1861e-d44b-48ab-abda-ddc3fc16b777",
+   "metadata": {},
+   "source": [
+    "## Concluding Remarks\n",
+    "\n",
+    "\n",
+    "## Resources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12205ff3-06b6-417f-9b65-52cf368f2c22",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
