added function to create network

--- a/node_classification/classify_node.ipynb
+++ b/node_classification/classify_node.ipynb
@@ -75,7 +75,40 @@
    "id": "9c6e106a-ba56-4659-a188-772306d5c078",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def generate_network(df, node_col, edge_col):\n",
+    "    '''\n",
+    "    This function will generate a article to article network given an input DataFrame.\n",
+    "    It will do so by creating an edge_dictionary where each key is going to be a node\n",
+    "    referenced by unique values in node_col and the values will be a list of other nodes\n",
+    "    connected to the key through the edge_col.\n",
+    "    \n",
+    "    params:\n",
+    "        df (DataFrame) : The dataset which holds the node and edge columns\n",
+    "        node_col (String) : The column name associated to the nodes of the network\n",
+    "        edge_col (String) : The column name associated to the edges of the network\n",
+    "        \n",
+    "    returns:\n",
+    "        A networkx graph corresponding to the input dataset\n",
+    "        \n",
+    "    example:\n",
+    "        generate_network(\n",
+    "            research_df,\n",
+    "            node_col = 'article_id',\n",
+    "            edge_col = 'main_topic'\n",
+    "        )\n",
+    "    '''\n",
+    "    edge_dct = {}\n",
+    "    for i,g in df.groupby(node_col):\n",
+    "        topics = g[edge_col].unique()\n",
+    "        edge_df = df[(df[node_col] != i) & (df[edge_col].isin(topics))]\n",
+    "        edges = list(edge_df[node_col].unique())\n",
+    "        edge_dct[i] = edges\n",
+    "    \n",
+    "    # create nx network\n",
+    "    g = nx.Graph(edge_dct, create_using = nx.MultiGraph)\n",
+    "    return g"
+   ]
   },
   {
    "cell_type": "code",
